@startuml
class ui.ReadCardWindow {
- String paymentType
- Verification verification
- JTextField verificationCodeTextField
- JLabel timeLabel
- Timer timer
- Order order
~ void init()
# void initLayout()
- void initTimer()
+ void actionPerformed(ActionEvent)
# void addVmIdLabel()
}
class ui.ReadCardWindow.Builder {
- DvmPanel prevPanel
- String paymentType
- Verification verification
- Order order
+ Builder setPrevPanel(DvmPanel)
+ Builder setpaymentType(String)
+ Builder setVerification(Verification)
+ Builder setOrder(Order)
+ ReadCardWindow build()
}
class ui.DvmJTextFieldLimit {
- int limit
+ void insertString(int,String,AttributeSet)
}
class ui.ReadVerificationWindow {
- JTextField verificationCodeTextField
- JLabel noticeLabel
~ void init()
# void initLayout()
+ void actionPerformed(ActionEvent)
}
class ui.HomeWindow {
# int selectedItemId
- EmptyBorder emptyBorder
- Border grayLineBorder
- {static} int BUTTON_WIDTH
- {static} int BUTTON_HEIGHT
- {static} int DRINK_PANEL_WIDTH
- {static} int DRINK_PANEL_HEIGHT
- Item[] itemArray
~ void init()
# void initLayout()
- void initItemButtons(Item[],JPanel)
+ void actionPerformed(ActionEvent)
}
class ui.DvmWindow {
# {static} JPanel CARD_PANEL
# {static} JLabel VM_ID_LABEL
# {static} Controller controller
# {static} GridBagConstraints constraints
- {static} String WINDOW_TITLE
- {static} int FRAME_WIDTH
- {static} int FRAME_HEIGHT
# {static} void setJLabel(JLabel,int,int,Color)
- {static} void setConstraints(int,int,int,int,int,int,int)
# {static} void addComponent(JPanel,Component,int,int,int,int,int,int,double,int)
# {static} void addComponent(JPanel,Component,int,int,int,int,int,int,int,int,int)
}
class ui.ShowVerificationWindow {
- JLabel verificationCodeLabel
- JLabel locationLabel
- JLabel distanceLabel
~ void init()
# void initLayout()
+ void actionPerformed(ActionEvent)
}
class ui.AdminWindow {
- {static} int BUTTON_WIDTH
- {static} int BUTTON_HEIGHT
- {static} int TEXT_FIELD_WIDTH
- {static} int TEXT_FIELD_HEIGHT
- {static} int DRINK_PANEL_WIDTH
- {static} int DRINK_PANEL_HEIGHT
- {static} int DRINK_PANEL2_WIDTH
- {static} int DRINK_PANEL2_HEIGHT
- {static} int DRINK_PANEL3_WIDTH
- {static} int DRINK_PANEL3_HEIGHT
- {static} Item[] localItems
- JTextField[] itemQtyTextField
- EmptyBorder emptyBorder
- Border grayLineBorder
~ void init()
# void initLayout()
+ void actionPerformed(ActionEvent)
- void initButtons(JPanel)
- void initTextFields(JPanel)
- void initLocalItems()
}
class ui.PrepaymentWindow {
- Order order
- {static} int BUTTON_WIDTH
- {static} int BUTTON_HEIGHT
~ void init()
# void initLayout()
+ void actionPerformed(ActionEvent)
}
class ui.AdminLoginWindow {
- JTextField pwdTextField
- JLabel noticeLabel
- EmptyBorder emptyBorder
~ void init()
# void initLayout()
+ void actionPerformed(ActionEvent)
}
abstract class ui.DvmPanel {
# DvmPanel prevPanel
# JPanel mainPanel
~ {abstract}void init()
# void initLayout()
- void initCommonLayout()
# void addVmIdLabel()
# {static} void resetCard()
}
class ui.PaymentWindow {
- {static} int TOTAL_PRICE_BUTTON_WIDTH
- {static} int TOTAL_PRICE_BUTTON_HEIGHT
- Order order
~ void init()
# void initLayout()
+ void actionPerformed(ActionEvent)
}
class ui.ItemShowWindow {
- {static} int ITEM_QUANTITY_BUTTON_WIDTH
- {static} int ITEM_QUANTITY_BUTTON_HEIGHT
- {static} int ITEM_NAME_BUTTON_WIDTH
- {static} int ITEM_NAME_BUTTON_HEIGHT
- {static} int ITEM_PRICE_BUTTON_WIDTH
- {static} int ITEM_PRICE_BUTTON_HEIGHT
- {static} int DEFAULT_ITEM_QUANTITY
- {static} JLabel itemQuantityLabel
- {static} JLabel itemPriceLabel
- int selectedItemNum
- Item selectedItem
# {static} int[] dvmInfo
~ void init()
# void initLayout()
+ void actionPerformed(ActionEvent)
# {static} String getTotalPrice()
}
class ui.DvmDialog {
- {static} int DIALOG_WIDTH
- {static} int DIALOG_HEIGHT
- JDialog dlg
+ void addLabel(JPanel,String)
+ void actionPerformed(ActionEvent)
+ void addBtn(JPanel,String)
}


ui.DvmPanel <|-- ui.ReadCardWindow
ui.ReadCardWindow +.. ui.ReadCardWindow.Builder
javax.swing.text.PlainDocument <|-- ui.DvmJTextFieldLimit
ui.DvmPanel <|-- ui.ReadVerificationWindow
ui.DvmPanel <|-- ui.HomeWindow
ui.JFrame <|-- ui.DvmWindow
ui.DvmPanel <|-- ui.ShowVerificationWindow
ui.DvmPanel <|-- ui.AdminWindow
ui.DvmPanel <|-- ui.PrepaymentWindow
ui.DvmPanel <|-- ui.AdminLoginWindow
java.awt.event.ActionListener <|.. ui.DvmPanel
ui.JPanel <|-- ui.DvmPanel
ui.DvmPanel <|-- ui.PaymentWindow
ui.DvmPanel <|-- ui.ItemShowWindow
java.awt.event.ActionListener <|.. ui.DvmDialog
@enduml